packages/components/bolt-form/src/form.scss
/* ... */
@mixin _bolt-input-text-and-background {
  padding: calc(var(--bolt-spacing-y-medium) / 2) var(--bolt-spacing-x-small); // [Mai] medium/2 matches button vertical spacing.
  font-family: var(--bolt-type-font-family-body);
  font-size: var(--bolt-type-font-size-small);
  color: $bolt-input-text-color;
  line-height: calc(
    var(--bolt-type-line-height-xsmall) * 1em - 1px
  ); // [Mai] The line-height matches button's line-height, the 1px offsets the 1px border from the input.
  background-color: $bolt-input-background-color;
}

.c-bolt-input {
  // This should ONLY apply to <input> elements, NOT anything else like <label>, <div>, <span>, etc.
  @include bolt-input-placeholder($bolt-input-placeholder-color);
  @include _bolt-input-text-and-background;

  display: block;
  appearance: none !important; // Removing native controls
  opacity: bolt-opacity(100); // [Mai] Reset mobile Safari browser default.
  transform: translate3d(
    0,
    0,
    0
  ); // Force browsers to render this using hardward acceleration. This resolves a rendering quirk seen in Chrome where the hover state would only work intermittently.
  width: 100%;
  text-indent: 0.01px;
  border-radius: $bolt-input-border-radius;
  border-width: $bolt-input-border-width;
  border-style: $bolt-input-border-style;
  border-color: $bolt-input-border-color;
  outline: none;
  transition: all $bolt-input-transition;
  text-overflow: '';

  @include bolt-mq($until: small) {
    padding-top: calc(var(--bolt-spacing-y-medium) / 2 - 2px);
    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 3px);
    font-size: 16px; // [Mai] Mobile Safari will zoom in when input is focused if the text is not at least 16px.
  }

  &::-ms-expand {
    display: none;
  }

  &.is-invalid,
  &.is-touched:invalid {
    @include bolt-input-placeholder($bolt-input-placeholder-color--invalid);

    color: $bolt-input-text-color--invalid;
    border-color: $bolt-input-border-color--invalid;
    background-color: $bolt-input-background-color--invalid;
  }

  &.is-disabled,
  &:disabled {
    @include bolt-input-placeholder($bolt-input-placeholder-color--disabled);

    color: $bolt-input-text-color--disabled;
    cursor: not-allowed;
    background-color: $bolt-input-background-color--disabled;
  }

  &.is-filled,
  &:focus {
    padding-top: calc(var(--bolt-spacing-y-medium) / 2 + 0.55rem);
    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 0.55rem);
  }

  &:hover {
    &:not(.is-disabled):not(:disabled) {
      @include bolt-shadow(
        $key: $bolt-input-shadow-level,
        $base-color: $bolt-input-box-shadow-color
      );
    }
  }

  &:focus {
    border-color: $bolt-input-border-color--focus !important;

    &:not(.is-disabled):not(:disabled) {
      box-shadow: 0 0 0 2px bolt-color(white),
        0 1px 4px 2px rgba($bolt-input-box-shadow-color, 0.1),
        0 5px 12px 0 rgba($bolt-input-box-shadow-color, 0.08);
    }
  }

  // [Mai] This is only used for displaying formatted numbers, it covers up the actual input field.
  .c-bolt-input__display-value {
    display: none;
  }

  &.is-filled:not(:invalid):not(:focus) ~ .c-bolt-input__display-value {
    @include _bolt-input-text-and-background;

    display: block;
    position: absolute;
    top: 1px;
    right: 1px;
    left: 1px;
    pointer-events: none;

    @include bolt-mq($until: small) {
      font-size: 16px; // [Mai] Mobile Safari will zoom in when input is focused if the text is not at least 16px.
      line-height: calc(
        var(--bolt-type-line-height-xsmall) * 1em - 6px
      ); // [Mai] This is just magic number, if the font-size ever changes, this also needs to change by inspecting in the browser and push the px.
    }

    &:before,
    &:after {
      display: inline-block;
    }

    &:before {
      content: attr(data-bolt-form-display-value-before);
    }

    &:after {
      content: attr(data-bolt-form-display-value-after);
    }
  }
}

.c-bolt-input--checkbox,
.c-bolt-input--radio {
  @include bolt-visuallyhidden;

  display: inline;
}

.c-bolt-floating-label {
  opacity: bolt-opacity(0);
  position: absolute;
  top: 0.9rem;
  left: calc(var(--bolt-spacing-x-small) + 2px);
  transform: translate3d(0, -50%, 0) translateY(0.4rem);
  color: $bolt-floating-label-text-color;
  line-height: 1;
  pointer-events: none;
  user-select: none;
  transition: all $bolt-floating-label-transition;
  white-space: nowrap;
  transform-origin: 0 100%;
}

.c-bolt-input.is-filled,
.c-bolt-input:focus,
.c-bolt-custom-input.is-active {
  // [Mai] A custom input is considered active if the regular input inside is filled or in focus.
  & ~ .c-bolt-floating-label {
    opacity: bolt-opacity(100);
    transform: translate3d(0, -100%, 0) translateY(0.1rem)
      scale($bolt-floating-label-text-scale);
  }
}

.c-bolt-input:focus,
.c-bolt-custom-input.is-active {
  & ~ .c-bolt-floating-label {
    color: $bolt-floating-label-text-color-active;
  }
}

.c-bolt-inline-label {
  display: inline-block;
  position: relative;
  padding-left: 1.5em;
  font-size: var(--bolt-type-font-size-small);
  color: bolt-theme(text);
  line-height: var(--bolt-type-line-height-small);
  cursor: pointer;
  user-select: none;

  &:before,
  &:after {
    position: absolute;
    transition: all $bolt-inline-label-transition;
  }

  &:before {
    content: '';
    top: 0.2em;
    left: 0;
    width: 1em;
    height: 1em;
    border-width: $bolt-inline-label-input-border-width;
    border-style: $bolt-inline-label-input-border-style;
    border-color: $bolt-inline-label-input-border-color;
    background-color: $bolt-input-background-color;
  }

  &:after {
    content: '';
    opacity: bolt-opacity(0);
    transform-origin: center;
  }
}
/* ... */

